[gd_scene load_steps=15 format=3 uid="uid://cpsdyhprded5d"]

[ext_resource type="Script" uid="uid://cn8jml0dmf128" path="res://Scripts/Classes/Blocks/FallThroughBlock.gd" id="1_k7nc4"]
[ext_resource type="Script" uid="uid://caq1qiwmy0mox" path="res://Scripts/Parts/BetterAnimatedSprite.gd" id="3_aqge3"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="3_mdw74"]
[ext_resource type="Script" uid="uid://cnheej0sxmoxg" path="res://Scripts/Parts/PlayerDetection.gd" id="4_6pcvn"]
[ext_resource type="JSON" path="res://Assets/Sprites/Blocks/TrickBlock.json" id="4_aqge3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_hyhae"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ob4o"]
atlas = SubResource("CompressedTexture2D_hyhae")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_byvq0"]
atlas = SubResource("CompressedTexture2D_hyhae")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5se2"]
atlas = SubResource("CompressedTexture2D_hyhae")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6idsv"]
atlas = SubResource("CompressedTexture2D_hyhae")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v6hd"]
atlas = SubResource("CompressedTexture2D_hyhae")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7od47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ob4o")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_byvq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5se2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6idsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v6hd")
}],
"loop": true,
"name": &"Turn",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjbwr"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7ak7"]
size = Vector2(16, 16)

[node name="TrickBlock" type="StaticBody2D"]
collision_layer = 6
collision_mask = 0
script = ExtResource("1_k7nc4")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7od47")
animation = &"Turn"
autoplay = "Idle"
script = ExtResource("3_aqge3")
do_offset = false
metadata/_custom_type_script = "uid://caq1qiwmy0mox"

[node name="ResourceSetterNew" type="Node" parent="Sprite" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("3_mdw74")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("4_aqge3")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tjbwr")

[node name="PlayerDetection" type="Area2D" parent="."]
script = ExtResource("4_6pcvn")
metadata/_custom_type_script = "uid://cnheej0sxmoxg"

[node name="Collision" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_e7ak7")

[connection signal="player_entered" from="PlayerDetection" to="." method="on_player_entered"]
[connection signal="player_exited" from="PlayerDetection" to="." method="on_player_exited"]
